[gd_scene load_steps=8 format=2]

[ext_resource path="res://Scenes/Game/GrowingCircle.tscn" type="PackedScene" id=1]
[ext_resource path="res://Scenes/Game/Answers.tscn" type="PackedScene" id=2]
[ext_resource path="res://Scenes/Game/HUD.tscn" type="PackedScene" id=3]
[ext_resource path="res://Scripts/Game.gd" type="Script" id=4]
[ext_resource path="res://Assets/Images/Circle.png" type="Texture" id=5]

[sub_resource type="Animation" id=1]
length = 0.001
tracks/0/type = "value"
tracks/0/path = NodePath("TransitionCircle:visible")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ false ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("TransitionCircle:scale")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( 0.1, 0.1 ) ]
}

[sub_resource type="Animation" id=2]
resource_name = "WhiteCircleGrow"
tracks/0/type = "value"
tracks/0/path = NodePath("TransitionCircle:visible")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ true ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("TransitionCircle:scale")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.7 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector2( 0.1, 0.1 ), Vector2( 2.6, 2.6 ) ]
}

[node name="Game" type="Node2D"]
script = ExtResource( 4 )

[node name="ColorRect" type="ColorRect" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
margin_right = 432.0
margin_bottom = 768.0
color = Color( 0.0588235, 0.239216, 0.666667, 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="HUD" parent="." instance=ExtResource( 3 )]

[node name="GrowingCircle" parent="." instance=ExtResource( 1 )]
position = Vector2( 216, 352 )

[node name="Answers" parent="." instance=ExtResource( 2 )]

[node name="GameTimer" type="Timer" parent="."]
autostart = true

[node name="GameOverTransition" type="Node" parent="."]

[node name="TransitionCircle" type="Sprite" parent="GameOverTransition"]
visible = false
position = Vector2( 204, 384 )
scale = Vector2( 0.1, 0.1 )
texture = ExtResource( 5 )

[node name="AnimationPlayer" type="AnimationPlayer" parent="GameOverTransition"]
anims/RESET = SubResource( 1 )
anims/WhiteCircleGrow = SubResource( 2 )

[connection signal="grow_circle" from="." to="GrowingCircle" method="_on_Game_grow_circle"]
[connection signal="remaining_time_update" from="." to="HUD" method="_on_Game_remaining_time_update"]
[connection signal="remaining_tries_update" from="." to="HUD" method="_on_Game_remaining_tries_update"]
[connection signal="right_answer_selected" from="Answers" to="." method="_on_Answers_right_answer_selected"]
[connection signal="wrong_answer_selected" from="Answers" to="." method="_on_Answers_wrong_answer_selected"]
[connection signal="timeout" from="GameTimer" to="." method="_on_GameTimer_timeout"]
